<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">EduApp</string>
    <string name="facebook_app_id">1822967397938853</string>
    <string name="fb_login_protocol_scheme">fb1822967397938853</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile"> </string>
    <string name="title_activity_bio_data_1">Personal information</string>
    <string name="title_activity_bio_data_major">Educational information</string>
    <string name="title_activity_bio_data_univ">Institution</string>
    <string name="action_save_profile">SAVE</string>
    <string name="error_field_required">This field is required</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign up.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="personal_information">Personal information</string>
    <string name="educational_information">Educational information</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="programme">Programme</string>
    <string name="mobile_number">Mobile number</string>
    <string name="institution">Institution</string>
    <string name="institution_address">Institution Address</string>
    <string name="this_information_will_be_displayed">This information will be displayed on your profile to make it easier for classmates to identify you</string>
    <string name="this_number_will_not_be_displayed">This number will not be displayed on your profile. Helps in resetting your password</string>
    <string name="by_filling_in_this_info_you_">By filling in this info, you will be easily recognized by people from your university.</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name_hint">Course Name</string>
    <string name="course_code_hint">Course Code</string>
    <string name="course_credit_units_hint">Credit Units e.g. 4</string>
    <string name="course_retake_text">Retake?</string>
    <string-array name="week_days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="course_dialog_title_message">New Course</string>
    <string name="add_course_string">Add</string>
    <string name="cancel_add_course_string">Cancel</string>
    <string name="period_editor_title">Periods:</string>
    <string name="day_text">Day</string>
    <string name="time_from_text">From</string>
    <string name="time_to_text">To</string>
    <string name="title_activity_add_courses">New Course</string>
    <string name="save_course">Save</string>
    <string name="discard_course">Cancel</string>
    <string name="error_course_name_required">Please provide a course name</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="course_details">Course Details</string>
    <string name="add_camera">Take picture</string>
    <string name="home_label">Home</string>
    <string name="other_label">Other</string>
    <string name="user_name">User</string>
    <string name="email">Email</string>
    <string name="profile_label">Profile</string>
    <string name="new_group_label">Create a Group</string>
    <string name="join_group_label">Join a Group</string>
    <string name="add_file_label">Add a File</string>
    <string name="add_picture_label">Add a Picture</string>
    <string name="add_reminders_label">Add a Reminder</string>
    <string name="new_course_label">Create a Course</string>
    <string name="pictures_title_text">Pictures</string>
    <string name="files_title_text">Files</string>
    <string name="add_link_label">Add a Link</string>
    <string name="title_activity_create_group">New Group</string>
    <string name="save_group">Save</string>
    <string name="discard_group">Cancel</string>

    <!-- Spinner items for the country codes-->
    <string-array name="country_call_codes">
        <item>+257</item>
        <item>+254</item>
        <item>+250</item>
        <item>+255</item>
        <item>+256</item>
    </string-array>

    <!-- spinner items for the degrees-->
    <string-array name="degrees_items">
        <item>Undergraduate</item>
        <item>Postgraduate</item>
        <item>None</item>
    </string-array>

    <!-- Spinner items for the year of study-->
    <string-array name="year_of_study">
        <item> 1  </item>
        <item> 2  </item>
        <item> 3  </item>
        <item> 4  </item>
        <item> 5  </item>

    </string-array>
    <string name="title_activity_home">EduApp</string>
    <string name="title_activity_groups">Groups</string>
    <string name="action_groups">Groups</string>
    <string name="title_activity_group_settings">Settings</string>
    <string name="due_text">Due:</string>
    <string name="title_activity_add_reminder">New Reminder</string>
    <string name="reminder_title_hint">Remind me to…</string>
    <string name="reminder_date_hint">Insert date here</string>
    <string name="reminder_start_time_hint">Starts at…</string>
    <string name="reminder_stop_time_hint">Stops at…</string>
    <string name="reminder_alert_minutes_hint">Alert me at…</string>
    <string name="error_reminder_title_required">Please provied a title</string>
    <string name="title_activity_save_links">Save Link To…</string>
    <string name="link_dialog_title_message">Save a Link</string>
    <string name="save_link_hint">Insert Link Here…</string>
    <string name="save_link_text">Add Link</string>
    <string name="cancel_save_link">Cancel</string>
    <string-array name="alert_types">
        <item>Alarm</item>
        <item>Alert</item>
        <item>Email</item>
        <item>SMS</item>
        <item>Default</item>
    </string-array>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>


</resources>
