<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddCourseActivity"
    tools:showIn="@layout/activity_add_course"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/new_course_form">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/course_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/course_name_hint"
                    android:textColorHint="@color/secondary_text"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/course_code_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/course_code_hint"
                    android:textColorHint="@color/secondary_text"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/course_credit_units_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/course_credit_units_hint"
                    android:textColorHint="@color/secondary_text"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/retake_checkBox"
                android:checked="false"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:paddingTop="6dp"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_marginBottom="16dp"
                android:text="@string/course_retake_text"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/period_editor_title"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:prompt="@string/day_text"
                    android:id="@+id/weekdays_spinner" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/starts_at_btn"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/time_from_text"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/stops_at_btn"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/time_to_text"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
