<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hp.eduapp.AddReminderActivity"
    tools:showIn="@layout/activity_add_reminder">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reminder_title_edittext"
            android:hint="@string/reminder_title_hint"
            android:textSize="16sp"
            android:textColorHint="@color/secondary_text"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="8dp"
            android:id="@+id/reminder_date_textview"
            android:text="@string/reminder_date_hint"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:id="@+id/reminder_start_time_textview"
            android:text="@string/reminder_start_time_hint"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:id="@+id/reminder_stop_time_textview"
            android:text="@string/reminder_stop_time_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/reminder_alert_minutes_edittext"
                android:hint="@string/reminder_alert_minutes_hint"
                android:textSize="16sp"
                android:textColorHint="@color/secondary_text"
                android:maxLines="1"
                android:inputType="number"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/reminder_alert_type_spinner"/>

    </LinearLayout>

</LinearLayout>
